--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     let appData = JSON.parse(JSON.stringify(DEFAULT_DATA));
     let checkedItems = {};
 
-    
+    // UNCOMMENT THESE 3 LINES FOR LOCALSTORAGE ON YOUR IPHONE:
     const storedData = localStorage.getItem('plate_data');
     if (storedData) appData = JSON.parse(storedData);
     const storedChecked = localStorage.getItem('plate_checked'); if (storedChecked) checkedItems = JSON.parse(storedChecked);
