--- a/index.html
+++ b/index.html
@@ -204,19 +204,14 @@
             <input type="file" id="json-file-input" accept=".json" class="w-full p-3 rounded-xl bg-zinc-900 border border-gray-700 text-base mb-3">
             <button id="upload-json-btn" class="w-full orange-bg text-white p-3 rounded-xl font-medium mb-4">Upload & Load JSON</button>
           </div>
-
-          <div class="mb-6">
-            <label class="block text-sm font-medium mb-2 text-gray-400">Or Edit Manually</label>
-            <textarea id="data-editor" class="w-full h-96 p-3 rounded-xl bg-zinc-900 border border-gray-700 font-mono text-sm" placeholder="Paste your JSON here..."></textarea>
-            <div class="flex gap-2 mt-3">
-              <button id="save-data-btn" class="flex-1 orange-bg text-white p-3 rounded-xl font-medium">Save & Reload</button>
-              <button id="reset-data-btn" class="flex-1 bg-red-600 text-white p-3 rounded-xl font-medium active:bg-red-700">Reset</button>
-            </div>
-          </div>
           
           <div class="mb-6">
             <label class="block text-sm font-medium mb-2 text-gray-400">Download Current Data</label>
-            <button id="download-json-btn" class="w-full bg-zinc-800 text-white p-3 rounded-xl font-medium">Download JSON File</button>
+            <button id="download-json-btn" class="w-full bg-zinc-800 text-white p-3 rounded-xl font-medium mb-4">Download JSON File</button>
+          </div>
+
+          <div class="mb-6">
+            <button id="reset-data-btn" class="w-full bg-red-600 text-white p-3 rounded-xl font-medium active:bg-red-700">Reset to Default</button>
           </div>
           
           <div class="text-xs text-gray-500 p-4 bg-zinc-900 rounded-xl border border-gray-800">
@@ -777,12 +772,6 @@
       document.body.style.overflow = '';
     }
 
-    function loadDataEditor() {
-      document.getElementById('data-editor').value = JSON.stringify(appData, null, 2);
-      document.getElementById('season-select').value = currentSeason;
-      document.getElementById('week-select').value = currentWeek;
-    }
-
     // ========================================
     // TAB SWITCHING
     // ========================================
@@ -809,7 +798,10 @@
       // Render content
       if (tabName === 'meals') renderMeals();
       if (tabName === 'shopping') renderShoppingList();
-      if (tabName === 'settings') loadDataEditor();
+      if (tabName === 'settings') {
+        document.getElementById('season-select').value = currentSeason;
+        document.getElementById('week-select').value = currentWeek;
+      }
     }
 
     // ========================================
@@ -837,19 +829,6 @@
       }
     });
 
-    document.getElementById('save-data-btn').addEventListener('click', () => {
-      try {
-        const newData = JSON.parse(document.getElementById('data-editor').value);
-        appData = newData;
-        saveData();
-        alert('✅ Data saved successfully!');
-        renderMeals();
-        renderShoppingList();
-      } catch (e) {
-        alert('❌ Invalid JSON format. Please check your data.');
-      }
-    });
-
     document.getElementById('reset-data-btn').addEventListener('click', () => {
       if (confirm('Reset all data to default?')) {
         appData = JSON.parse(JSON.stringify(DEFAULT_DATA));
@@ -857,7 +836,6 @@
         saveData();
         saveCheckedItems();
         alert('✅ Data reset!');
-        loadDataEditor();
         renderMeals();
         renderShoppingList();
       }
@@ -879,7 +857,6 @@
           appData = newData;
           saveData();
           alert('✅ JSON file uploaded successfully!');
-          loadDataEditor();
           renderMeals();
           renderShoppingList();
           fileInput.value = ''; // Clear input
