--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
   </div>
   
   <!-- Full Screen Recipe Modal -->
-  <div id="recipe-modal" class="hidden fixed inset-0 z-50 bg-black recipe-modal overflow-y-auto">
-    <div class="min-h-screen">
-      <div class="sticky top-0 bg-black/90 backdrop-blur-lg p-4 border-b border-gray-800 flex items-center gap-3 z-10" style="padding-top: calc(env(safe-area-inset-top) + 1.5rem); min-height: calc(env(safe-area-inset-top) + 4.5rem);">
+  <div id="recipe-modal" class="hidden fixed inset-0 z-50 bg-black recipe-modal">
+    <div class="h-full flex flex-col">
+      <div class="sticky top-0 bg-black/90 backdrop-blur-lg p-4 border-b border-gray-800 flex items-center gap-3 z-10 flex-shrink-0" style="padding-top: calc(env(safe-area-inset-top) + 1.5rem); min-height: calc(env(safe-area-inset-top) + 4.5rem);">
         <button id="close-modal" class="text-3xl leading-none p-2 -ml-2">&larr;</button>
         <h2 id="modal-title" class="text-xl font-semibold flex-1"></h2>
       </div>
-      <div id="modal-content" class="p-6"></div>
+      <div id="modal-content" class="p-6 flex-1 overflow-y-auto"></div>
     </div>
   </div>
 
